# cpp

./: CMakeLists.txt  README.md  build.gradle.kts  settings.gradle
src/main/cpp/: HelloWorld.cpp  Main.cpp
src/main/headers/: HelloWorld.h
src/main/include/: HelloWorld.h
src/test/cpp/: HelloWorldTest.cpp
